eform-client/src/scss/styles.scss
/* ... */
.mat-mdc-form-field {

  .mat-mdc-floating-label {
    color: var(--text-body) !important;
  }

  .mat-mdc-form-field-focus-overlay {
    background: unset !important;
  }

  .mdc-text-field {
    border: 1px solid var(--border);
    border-radius: 4px !important;

    background-color: var(--bg) !important;

    &__ripple {
      ::before {
        background-color: var(--bg) !important;
      }

      ::after {
        background-color: var(--bg) !important;
      }
    }

    &__input {
      background-color: var(--bg) !important;
    }

    &--filled:not(.mdc-text-field--disabled) {
      background-color: var(--bg) !important;

      .mdc-line-ripple {
        &::before {
          border-bottom: unset !important;
        }

        &::after {
          border-bottom-color: var(--bg) !important;
        }
      }

      .mat-mdc-floating-label {
        color: var(--text-body) !important;
      }
    }
  }
}


.mat-tree {
  background-color: var(--bg) !important;
}

.mat-drawer-inner-container {
  background: var(--bg) !important;

  .mat-tree, .mat-expansion-panel {
    background: var(--bg) !important;

    a {
      color: var(--text-header, #0F1316);
      font-size: var(--Text-size-sm, 14px);
      font-style: normal;
      font-weight: 600;
      line-height: var(--Text-line-height-sm, 22px);
    }

    .nav-link {
      color: var(--text-header, #0F1316);
      font-size: var(--Text-size-sm, 14px);
      font-style: normal;
      font-weight: 600;
      line-height: var(--Text-line-height-sm, 22px);
    }

    .mat-nested-tree-node {
      mat-accordion {
        mat-expansion-panel {
          .mat-expansion-panel-header {
            &:hover {
              .mat-expansion-indicator {
                svg {
                  fill: var(--mdc-theme-on-primary) !important;
                }
              }
            }
          }
        }
      }

    }
  }
}

.mat-drawer-side {
  background: var(--bg) !important;
  border-right-color: var(--border) !important;
}

.mat-mdc-cell {
  border-bottom-color: var(--border) !important;
}

.mtx-grid-toolbar {
  border: unset !important;
}

.mtx-grid {
  border-color: var(--border) !important;
  border: unset !important;
  outline: unset !important;

  .mat-mdc-table {
    background: var(--bg) !important;
    border-bottom: 1px solid var(--border) !important;
    border-color: var(--border) !important;

    .mat-mdc-header-row, thead {
      border-color: var(--border) !important;
      background: var(--card) !important;

      tr {
        border-color: var(--border) !important;

        th {
          border-color: var(--border) !important;
          color: var(--text-header, #0F1316);
          font-size: var(--Text-size-sm, 14px);
          font-style: normal;
          font-weight: 600;
          line-height: var(--Text-line-height-sm, 22px);
        }
      }
    }
  }

  tbody {
    border-color: var(--border) !important;

    tr {
      border-color: var(--border) !important;

      td {
        border-color: var(--border) !important;
        color: var(--text-body);
        font-size: var(--Text-size-sm, 14px);
        font-style: normal;
        font-weight: 500;
        line-height: var(--Text-line-height-sm, 22px);
      }

      //&:last-child {
      //  border-bottom: 1px solid var(--border)!important;
      //}
    }
  }

}

.mat-mdc-paginator-outer-container, .mat-mdc-paginator-outer-container, .mat-mdc-paginator {
  background: var(--bg) !important;
  border: unset !important;
}

.mat-mdc-paginator-container, .mat-mdc-select-value-text, .mat-mdc-select-arrow svg {
  color: var(--text-header, #0F1316);
  font-size: var(--Text-size-sm, 14px);
  font-style: normal;
  font-weight: 500;
  line-height: var(--Text-line-height-sm, 22px);

  .mat-mdc-form-field .mdc-text-field {
    border-radius: var(--rounded-full, 9999px) !important;
    border: 1px solid var(--border, #EBEFF2) !important;
    background: var(--bg, #FFF) !important;
  }

  .mdc-notched-outline__leading, .mdc-notched-outline__notch, .mdc-notched-outline__trailing {
    border: unset !important;
    outline: unset !important;
  }
}

.mat-mdc-dialog-actions {
  gap: 10px;
}

.mat-mdc-dialog-surface {
  background-color: var(--bg) !important;
  border-radius: var(--rounded-20, 20px);
  display: flex;
  padding: 0px;
  //flex-direction: column;
  //align-items: center;
  gap: 24px;
}

eform-new-subheader {
  .mat-mdc-card {
    box-shadow: unset !important;
    border: none !important;
  }
}

.mat-mdc-card {
  box-shadow: unset !important;
  border: 1px solid var(--border) !important;
  //border-color: var(--border) !important;
}

div.mat-mdc-select-panel {
  overflow: hidden !important;
}
/* ... */

